tests/mm0_mmu/fail/bad-sort4.mm0
-- free modifier not last 
free strict sort s10;